--- a/sharafdg.html
+++ b/sharafdg.html
@@ -6,7 +6,7 @@
 <body>
     <!-- CRITICAL: Point this to the NEW brand's video name -->
     <video loop autoplay muted playsinline>
-        <source src="brand_b_promo.mp4" type="video/mp4">
+        <source src="The Mega Home Edition is here at Sharaf DG!.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
