--- a/sharafdg.html
+++ b/sharafdg.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- ... (rest of the header/style code for full screen) ... -->
-    <title>Ad A Short Version</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clean Auto-Play Embed</title>
+    <style>
+        /* Ensures the video fills the entire Looker Studio iframe */
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden; 
+        }
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensures the video covers the full area without distortion */
+        }
+    </style>
 </head>
 <body>
+    <!-- *** IMPORTANT: CHANGE '🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4' TO THE NAME FROM STEP 1! *** -->
     <video loop autoplay muted playsinline>
-        <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4"> 
+        <source src="All Protein powders are NOT high quality ｜ Rishabh Pant x Optimum Nutrition.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
