--- a/sharafdg.html
+++ b/sharafdg.html
@@ -23,7 +23,7 @@
 <body>
     <!-- *** IMPORTANT: CHANGE '🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4' TO THE NAME FROM STEP 1! *** -->
     <video loop autoplay muted playsinline>
-        <source src="All Protein powders are NOT high quality ｜ Rishabh Pant x Optimum Nutrition.mp4" type="video/mp4">
+        <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
