--- a/sharafdg.html
+++ b/sharafdg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clean Auto-Play Embed</title>
+    <title>sharafdg.html Embed</title>
     <style>
         /* Ensures the video fills the entire Looker Studio iframe */
         body, html {
