--- a/sharafdg.html
+++ b/sharafdg.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sharafdg.html Embed</title>
+    <title>Sharaf DG Full Screen Ad</title>
     <style>
-        /* Ensures the video fills the entire Looker Studio iframe */
+        /* CRITICAL FIX: Use !important to override Looker Studio's default margins/padding */
         body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
+            margin: 0 !important; 
+            padding: 0 !important; 
+            width: 100% !important; 
+            height: 100% !important; 
             overflow: hidden; 
         }
+        /* Forces the video itself to cover the container */
         video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ensures the video covers the full area without distortion */
+            width: 100% !important; 
+            height: 100% !important; 
+            object-fit: cover; /* Ensures video fills the area, potentially cropping edges */
         }
     </style>
 </head>
 <body>
-    <!-- *** IMPORTANT: CHANGE '🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4' TO THE NAME FROM STEP 1! *** -->
+    <!-- IMPORTANT: Use the exact filename you uploaded -->
     <video loop autoplay muted playsinline>
         <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4">
         Your browser does not support the video tag.
