--- a/sharafdg.html
+++ b/sharafdg.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sharaf DG Full Screen Ad</title>
+    <title>Sharaf DG Full Screen Ad Final</title>
     <style>
-        /* CRITICAL FIX: Use !important to override Looker Studio's default margins/padding */
+        /* CRITICAL: Force the outermost page container to 100% with no padding/margins */
         body, html {
             margin: 0 !important; 
             padding: 0 !important; 
@@ -13,19 +13,31 @@
             height: 100% !important; 
             overflow: hidden; 
         }
-        /* Forces the video itself to cover the container */
+        
+        /* New Wrapper DIV: Ensures the video container itself fills the space */
+        #video-container {
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Forces the video to cover the container */
         video {
-            width: 100% !important; 
-            height: 100% !important; 
-            object-fit: cover; /* Ensures video fills the area, potentially cropping edges */
+            width: 100%; 
+            height: 100%; 
+            object-fit: cover; /* This makes it fill the box by cropping edges if needed */
         }
     </style>
 </head>
 <body>
-    <!-- IMPORTANT: Use the exact filename you uploaded -->
-    <video loop autoplay muted playsinline>
-        <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <!-- New wrapper container -->
+    <div id="video-container">
+        <!-- controls="false" ensures no player controls show up -->
+        <video loop autoplay muted playsinline controls="false"> 
+            <!-- NOTE: Use your exact filename here -->
+            <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 </body>
 </html>
+
