--- a/clean_autoplay.html
+++ b/clean_autoplay.html
@@ -3,27 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clean Auto-Play Embed</title>
+    <title>Sharaf DG Full Screen & Loop</title>
     <style>
-        /* Ensures the video fills the entire Looker Studio iframe */
+        /* CRITICAL: Use !important to override Looker Studio's default margins/padding */
         body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden; 
+            margin: 0 !important; 
+            padding: 0 !important; 
+            width: 100% !important; 
+            height: 100% !important; 
+            overflow: hidden !important; /* Prevents scrollbars */
         }
+        
+        /* Forces the video itself to cover the container */
         video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ensures the video covers the full area without distortion */
+            width: 100% !important; 
+            height: 100% !important; 
+            /* If cropping is a problem, change 'cover' to 'contain' and manually resize the box in Looker Studio */
+            object-fit: cover; 
         }
     </style>
 </head>
 <body>
-    <!-- *** IMPORTANT: CHANGE 'YOUR_VIDEO_FILE.mp4' TO THE NAME FROM STEP 1! *** -->
-    <video loop autoplay muted playsinline>
-        <source src="All Protein powders are NOT high quality ｜ Rishabh Pant x Optimum Nutrition.mp4" type="video/mp4">
+    <!-- 
+        1. loop, autoplay, muted, playsinline: Essential for looping/starting.
+        2. controls="false": CRITICAL for reliable looping and removing player bars. 
+        3. SOURCE: Update this to your specific Sharaf DG video filename.
+    -->
+    <video loop autoplay muted playsinline controls="false"> 
+        <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
