--- a/sharaf_dg_iphone_17_pro.html
+++ b/sharaf_dg_iphone_17_pro.html
@@ -18,16 +18,18 @@
         video {
             width: 100% !important; 
             height: 100% !important; 
-            object-fit: cover; 
+            /* We use 'contain' here to prevent cropping, which might leave black bars if the Looker Studio window isn't sized correctly. */
+            object-fit: contain; 
         }
     </style>
 </head>
 <body>
     <!-- 
         Ensure you use the EXACT filename of your iPhone 17 Pro video upload here.
+        CRITICAL CHANGE: Removed controls="false" attribute entirely for better compatibility.
     -->
-    <video loop autoplay muted playsinline controls="false"> 
-        <source src="🚀iPhone 17 Pro — The Most Powerful iPhone Ever at Sharaf DG.mp4" type="video/mp4">
+    <video loop autoplay muted playsinline> 
+        <source src="sharaf_dg_iphone_17_pro.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
