--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -48,7 +48,7 @@
             You can use a placeholder image URL for testing.
         -->
         <img 
-            src="https://www.bing.com/images/search?view=detailV2&ccid=sAQHTMdN&id=E29A7CF87932ECE8452A4090746623D64B393032&thid=OIP.sAQHTMdNOs7NMVgP1RhXhQHaFS&mediaurl=https%3a%2f%2fmarketingmind.in%2fwp-content%2fuploads%2f2024%2f07%2fLS-Digital-logo.png&exph=536&expw=750&q=ls+digital+logo&FORM=IRPRST&ck=4563857A22EF1C42AC78F258D976841C&selectedIndex=0&itb=0&idpp=overlayview&ajaxhist=0&ajaxserp=0" 
+            src="https://github.com/ayushgharge-ops/ls-assets/blob/main/lsdigitallogo-removebg-preview.png" 
             alt="Company Logo" 
             class="logo-img"
         />
