--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoom Animation Logo</title>
+    <title>Digital Logo Zoom Animation</title>
     <style>
         /* Ensures the embed component fills its box and centers content */
         body, html {
@@ -29,9 +29,8 @@
             width: 100%;
             max-width: 250px; /* Adjust this max size based on your embed component */
             animation: single-zoom-pulse 1.5s ease-out 0s 1 forwards; /* 1.5s duration, runs ONCE, holds final state */
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            border-radius: 8px;
-            overflow: hidden;
+            /* Removed box-shadow and border-radius for a cleaner digital look */
+            overflow: hidden; 
         }
 
         .logo-img {
@@ -44,12 +43,14 @@
 <body>
     <div class="logo-container">
         <!-- 
-            *** ACTION REQUIRED: REPLACE THE SRC WITH YOUR ACTUAL LOGO URL ***
-            You can use a placeholder image URL for testing.
+            *** ACTION REQUIRED: PASTE YOUR DIRECT PUBLIC LOGO URL HERE (e.g., the Raw GitHub link) ***
+            
+            Example of what it should look like (but with your actual link):
+            src="https://raw.githubusercontent.com/user/repo/main/lsdigitallogo-removebg-preview.png"
         -->
         <img 
-            src="https://github.com/ayushgharge-ops/ls-assets/blob/main/lsdigitallogo-removebg-preview.png" 
-            alt="Company Logo" 
+            src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
+            alt="Digital Logo" 
             class="logo-img"
         />
     </div>
