--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -29,7 +29,6 @@
             width: 100%;
             max-width: 250px; /* Adjust this max size based on your embed component */
             animation: single-zoom-pulse 1.5s ease-out 0s 1 forwards; /* 1.5s duration, runs ONCE, holds final state */
-            /* Removed box-shadow and border-radius for a cleaner digital look */
             overflow: hidden; 
         }
 
@@ -43,10 +42,8 @@
 <body>
     <div class="logo-container">
         <!-- 
-            *** ACTION REQUIRED: PASTE YOUR DIRECT PUBLIC LOGO URL HERE (e.g., the Raw GitHub link) ***
-            
-            Example of what it should look like (but with your actual link):
-            src="https://raw.githubusercontent.com/user/repo/main/lsdigitallogo-removebg-preview.png"
+            FINAL LINK: This uses the correct raw.githubusercontent.com domain 
+            to ensure the image loads correctly within the Looker Studio iframe.
         -->
         <img 
             src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
