--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -28,7 +28,8 @@
         .logo-container {
             width: 100%;
             max-width: 250px; /* Adjust this max size based on your embed component */
-            animation: single-zoom-pulse 1.5s ease-out 0s 1 forwards; /* 1.5s duration, runs ONCE, holds final state */
+            /* DURATION CHANGED TO 4 SECONDS BELOW */
+            animation: single-zoom-pulse 4s ease-out 0s 1 forwards; 
             overflow: hidden; 
         }
 
@@ -41,10 +42,6 @@
 </head>
 <body>
     <div class="logo-container">
-        <!-- 
-            FINAL LINK: This uses the correct raw.githubusercontent.com domain 
-            to ensure the image loads correctly within the Looker Studio iframe.
-        -->
         <img 
             src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
             alt="Digital Logo" 
@@ -53,3 +50,4 @@
     </div>
 </body>
 </html>
+
