--- a/clean_autoplay.html
+++ b/clean_autoplay.html
@@ -30,7 +30,7 @@
         3. SOURCE: Update this to your specific Sharaf DG video filename.
     -->
     <video loop autoplay muted playsinline controls="false"> 
-        <source src="🌈 iPhone 17 - Magic in Every Shade at Sharaf DG!.mp4" type="video/mp4">
+        <source src="All Protein powders are NOT high quality ｜ Rishabh Pant x Optimum Nutrition.mp4">
         Your browser does not support the video tag.
     </video>
 </body>
