--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -39,7 +39,7 @@
             max-width: 90%;
             max-height: 90%;
             height: auto;
-            /* Animation parameters: 4s duration, loop infinitely, smooth timing */
+            /* Applying the animation */
             animation: zoomInOut 4s infinite ease-in-out;
             transform-origin: center center; /* Ensures zoom originates from the center */
         }
@@ -56,5 +56,4 @@
     </div>
 </body>
 </html>
-
         
