--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -1,9 +1,9 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LS Digital Aggressive Zoom Logo</title>
+    <title>LS Digital Animated Logo</title>
     <style>
         /* CSS to ensure the logo is centered and fills the embed container */
         body, html {
@@ -21,7 +21,7 @@ c<!DOCTYPE html>
         /* Keyframes for the dramatic zoom effect */
         @keyframes zoomInOut {
             0% { transform: scale(1); } /* Start at normal size */
-            50% { transform: scale(1.3); } /* Zoom in aggressively (50% larger) */
+            50% { transform: scale(1.5); } /* Zoom in aggressively (50% larger) */
             100% { transform: scale(1); } /* Return to normal size */
         }
 
@@ -39,8 +39,9 @@ c<!DOCTYPE html>
             max-width: 90%;
             max-height: 90%;
             height: auto;
-            /* Applying the animation */
-            animation: zoomInOut 4s infinite ease-in-out;
+            /* Animation parameters: 4s duration, runs 2 times, holds final state */
+            /* KEY CHANGE: '2 forwards' stops it after two cycles */
+            animation: zoomInOut 4s 2 forwards ease-in-out;
             transform-origin: center center; /* Ensures zoom originates from the center */
         }
     </style>
@@ -56,4 +57,3 @@ c<!DOCTYPE html>
     </div>
 </body>
 </html>
-        
