--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -15,14 +15,19 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: transparent; /* Makes the background transparent in Looker Studio */
+            background: transparent;
         }
 
-        /* Keyframes for the dramatic zoom effect */
-        @keyframes zoomInOut {
-            0% { transform: scale(1); } /* Start at normal size */
-            50% { transform: scale(1.5); } /* Zoom in aggressively (50% larger) */
-            100% { transform: scale(1); } /* Return to normal size */
+        /* Keyframes for the professional fade-up and slide effect */
+        @keyframes fadeUpSlide {
+            0% { 
+                opacity: 0; 
+                transform: translateY(20px); /* Start 20px below final spot */
+            }
+            100% { 
+                opacity: 1; 
+                transform: translateY(0); /* End at final spot */
+            }
         }
 
         /* The container holding the image */
@@ -39,16 +44,20 @@
             max-width: 90%;
             max-height: 90%;
             height: auto;
-            /* Animation parameters: 4s duration, runs 2 times, holds final state */
-            /* KEY CHANGE: '2 forwards' stops it after two cycles */
-            animation: zoomInOut 4s 2 forwards ease-in-out;
-            transform-origin: center center; /* Ensures zoom originates from the center */
+            /* Added explicit dimensions to help with rendering */
+            width: auto; 
+            min-height: 50px; /* Ensure a minimum visible size */
+            
+            opacity: 0; /* Start invisible */
+            /* Animation parameters: 2.0s duration, runs 1 time, holds final state */
+            animation: fadeUpSlide 2.0s 1 forwards ease-out;
+            transform-origin: center center;
         }
     </style>
 </head>
 <body>
     <div class="logo-container">
-        <!-- CRITICAL: Ensure this is the correct Raw GitHub link for your logo image -->
+        <!-- CRITICAL: Please double-check this URL. If it's wrong, the image won't display. -->
         <img 
             src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
             alt="Digital logo" 
@@ -57,3 +66,4 @@
     </div>
 </body>
 </html>
+
