--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -49,8 +49,8 @@
             min-height: 50px; /* Ensure a minimum visible size */
             
             opacity: 0; /* Start invisible */
-            /* Animation parameters: 2.0s duration, runs 1 time, holds final state */
-            animation: fadeUpSlide 2.0s 1 forwards ease-out;
+            /* Animation parameters: 5.0s duration (changed from 2.0s), runs 1 time, holds final state */
+            animation: fadeUpSlide 5.0s 1 forwards ease-out;
             transform-origin: center center;
         }
     </style>
