--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -1,69 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LS Digital Animated Logo</title>
-    <style>
-        /* CSS to ensure the logo is centered and fills the embed container */
-        body, html {
-            margin: 0 !important;
-            padding: 0 !important;
-            width: 100% !important;
-            height: 100% !important;
-            overflow: hidden !important;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: transparent;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vertical Rotate Image</title>
+<style>
 
-        /* Keyframes for the professional fade-up and slide effect */
-        @keyframes fadeUpSlide {
-            0% { 
-                opacity: 0; 
-                transform: translateY(20px); /* Start 20px below final spot */
-            }
-            100% { 
-                opacity: 1; 
-                transform: translateY(0); /* End at final spot */
-            }
-        }
+  body {
 
-        /* The container holding the image */
-        .logo-container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    display: flex;
 
-        /* The image itself, applying the animation */
-        .logo-img {
-            max-width: 90%;
-            max-height: 90%;
-            height: auto;
-            /* Added explicit dimensions to help with rendering */
-            width: auto; 
-            min-height: 50px; /* Ensure a minimum visible size */
-            
-            opacity: 0; /* Start invisible */
-            /* Animation parameters: 5.0s duration (changed from 2.0s), runs 1 time, holds final state */
-            animation: fadeUpSlide 5.0s 1 forwards ease-out;
-            transform-origin: center center;
-        }
-    </style>
+    justify-content: center;
+
+    align-items: center;
+
+    height: 100vh;
+
+    background: #f0f0f0;
+
+  }
+ 
+  .rotate-vertical {
+
+    width: 300px; /* Adjust image size */
+
+    transform-style: preserve-3d;
+
+    animation: swing 3s ease-in-out infinite alternate;
+
+  }
+ 
+  @keyframes swing {
+
+    0% {
+
+      transform: rotateY(-90deg);
+
+    }
+
+    50% {
+
+      transform: rotateY(90deg);
+
+    }
+
+    100% {
+
+      transform: rotateY(-90deg);
+
+    }
+
+  }
+</style>
 </head>
-<body>
-    <div class="logo-container">
-        <!-- CRITICAL: Please double-check this URL. If it's wrong, the image won't display. -->
-        <img 
+<body> <img 
             src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
             alt="Digital logo" 
             class="logo-img"
         />
-    </div>
 </body>
 </html>
 
+ 
