--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -5,60 +5,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vertical Rotate Image</title>
 <style>
-
   body {
-
     display: flex;
-
     justify-content: center;
-
     align-items: center;
-
     height: 100vh;
-
     background: #f0f0f0;
-
   }
  
   .rotate-vertical {
-
     width: 300px; /* Adjust image size */
-
     transform-style: preserve-3d;
-
     animation: swing 3s ease-in-out infinite alternate;
-
   }
  
   @keyframes swing {
-
     0% {
-
       transform: rotateY(-90deg);
-
     }
-
     50% {
-
       transform: rotateY(90deg);
-
     }
-
     100% {
-
       transform: rotateY(-90deg);
-
     }
-
   }
 </style>
 </head>
-<body> <img 
-            src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
-            alt="Digital logo" 
-            class="logo-img"
-        />
+<body>
+<img src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" >
 </body>
 </html>
-
- 
