--- a/ls_digital_logo.html
+++ b/ls_digital_logo.html
@@ -1,74 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LS Digital Animated Logo</title>
-    <style>
-        /* CSS to ensure the logo is centered and fills the embed container */
-        body, html {
-            margin: 0 !important;
-            padding: 0 !important;
-            width: 100% !important;
-            height: 100% !important;
-            overflow: hidden !important;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: transparent;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LS Digital Animated Logo</title>
+    <style>
+        /* CSS to ensure the logo is centered and fills the embed container */
+        body, html {
+            margin: 0 !important;
+            padding: 0 !important;
+            width: 100% !important;
+            height: 100% !important;
+            overflow: hidden !important;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: transparent;
+        }
 
+        /* Keyframes for the professional fade-up and slide effect */
+        @keyframes fadeUpSlide {
+            0% { 
+                opacity: 0; 
+                transform: translateY(20px); /* Start 20px below final spot */
+            }
+            100% { 
+                opacity: 1; 
+                transform: translateY(0); /* End at final spot */
+            }
+        }
 
+        /* The container holding the image */
+        .logo-container {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-        /* Keyframes for the professional fade-up and slide effect */
-        @keyframes fadeUpSlide {
-            0% { 
-                opacity: 0; 
-                transform: translateY(20px); /* Start 20px below final spot */
-            }
-            100% { 
-                opacity: 1; 
-                transform: translateY(0); /* End at final spot */
-            }
-        }
-
-
-
-        /* The container holding the image */
-        .logo-container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-
-
-        /* The image itself, applying the animation */
-        .logo-img {
-            max-width: 90%;
-            max-height: 90%;
-            height: auto;
-            /* Added explicit dimensions to help with rendering */
-            width: auto; 
-            min-height: 50px; /* Ensure a minimum visible size */
-            
-            opacity: 0; /* Start invisible */
-            /* Animation parameters: 5.0s duration (changed from 2.0s), runs 1 time, holds final state */
-            animation: fadeUpSlide 5.0s 1 forwards ease-out;
-            transform-origin: center center;
-        }
-    </style>
+        /* The image itself, applying the animation */
+        .logo-img {
+            max-width: 90%;
+            max-height: 90%;
+            height: auto;
+            width: auto; 
+            min-height: 50px; 
+            
+            opacity: 0; /* Start invisible */
+            /* UPDATED: Faster 2.5s duration for a snappier, professional look */
+            animation: fadeUpSlide 5s 1 forwards ease-out;
+            transform-origin: center center;
+        }
+    </style>
 </head>
 <body>
-    <div class="logo-container">
-        <!-- CRITICAL: Please double-check this URL. If it's wrong, the image won't display. -->
-        <img 
-            src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
-            alt="Digital logo" 
-            class="logo-img"
-        />
-    </div>
+    <div class="logo-container">
+        <!-- FIXED: Using the full, stable content fetch ID for the uploaded file -->
+        <img 
+            src="https://raw.githubusercontent.com/ayushgharge-ops/ls-assets/main/lsdigitallogo-removebg-preview.png" 
+            alt="LS Digital logo" 
+            class="logo-img"
+        />
+    </div>
 </body>
 </html>
