--- a/frulenco.html
+++ b/frulenco.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All-New Kids Furniture by Furlenco</title>
+    <title>Feel At Home ｜ Furlenco</title>
     <style>
         /* CRITICAL: Aggressive CSS to eliminate all margins/padding from the iframe */
         body, html {
@@ -39,7 +39,7 @@
 <body>
     <video 
         id="video-player" 
-        src="All-New Kids Furniture by Furlenco.mp4" 
+        src="Feel At Home ｜ Furlenco.mp4" 
         autoplay 
         muted 
         playsinline
