--- a/Optimum_nutrition_logo.html
+++ b/Optimum_nutrition_logo.html
@@ -1,82 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ON Brand Logo</title>
+    <title>Animated Brand Logo - ON </title>
     <style>
-        body, html {
-            /* Aggressive transparency */
-            background-color: transparent !important; 
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden; 
-        }
-
-        #animator-container {
-            /* Container to hold the logo and center it */
+        body {
+            /* Center the logo on the page */
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 100%;
-            height: 100%;
+            min-height: 100vh; 
+            margin: 0;
+            background-color: #ffffff;
+            overflow: hidden; 
         }
 
         .logo {
             /* Set a manageable size for the logo */
-            width: 300px; /* Adjust this to match your static logo size */
+            width: 300px; /* Adjust size as needed */
             height: auto;
             display: block; 
-            position: relative; /* Needed for transform/translate animation */
-
-            /* --- Animation Properties --- */
-            animation: slideIn 2s ease-out 0.5s 1 forwards; /* 2s duration, 0.5s start delay */
             
-            /* Initial state (off-screen left and invisible) */
+            /* --- Animation Properties --- */
+            /* Play Once (1) and Stay at End Position (forwards) */
+            animation: zoom-in-once 2s ease-out 0.5s 1 forwards; 
+            
+            /* Start invisible before animation begins */
             opacity: 0; 
-            transform: translateX(-100%); 
         }
 
-        /* --- Keyframes for the Slide-in Animation --- */
-        @keyframes slideIn {
+        /* --- Keyframes for the Animation --- */
+        @keyframes zoom-in-once {
             0% {
                 opacity: 0; 
-                transform: translateX(-100%); /* Start completely off the left edge */
+                transform: scale(2.0); /* Start zoomed in */
             }
             10% {
-                opacity: 1; /* Fade in quickly as it starts moving */
+                opacity: 1; /* Fade in quickly */
+            }
+            80% {
+                transform: scale(1.05); /* Slight overshoot for a nice bounce */
             }
             100% {
                 opacity: 1; 
-                transform: translateX(0); /* End at the centered position */
+                transform: scale(1.0); /* Settle at normal size */
             }
         }
     </style>
 </head>
 <body>
-    <div id="animator-container">
-        <img id="ON Brand Logo" 
-             src="Optimum-Nutrition-Logo-removebg-preview (1).png" 
-             alt="ON Brand Logo" 
-             class="logo">
-    </div>
-
-    <script>
-        const animationDuration = 2000; 
-        const initialDelay = 500;       
-        const safetyDelay = 500;        
-
-        // Total time before hiding: 2000ms + 500ms + 500ms = 3000ms (3 seconds)
-        const totalDuration = animationDuration + initialDelay + safetyDelay;
-
-        setTimeout(() => {
-            const container = document.getElementById('animator-container');
-            if (container) {
-                // HIDE THE ENTIRE HTML CONTENT
-                container.style.display = 'none';
-            }
-            document.body.style.backgroundColor = 'transparent';
-        }, totalDuration);
-    </script>
+    <img src="Optimum-Nutrition-Logo-removebg-preview (1).png" 
+         alt="ON Brand logo" 
+         class="logo">
 </body>
 </html>
