--- a/isopure_logo.html
+++ b/isopure_logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ISOPURE Sequential Slide-In</title>
+    <title>ISOPURE Sequential Impact Reveal</title>
     <style>
         body, html {
             /* Ensures the background of the iframe is transparent */
@@ -29,18 +29,17 @@
             display: flex; 
             font-family: Arial, sans-serif;
             font-size: 80px; 
-            color: #00bcd4; 
+            color: #00bcd4; /* ISOPURE blue color */
             font-weight: bold;
-            /* Wrap the letters in a container to move them as a group */
             position: relative;
         }
         
         .letter {
             display: inline-block;
-            opacity: 0; /* Start invisible */
-            animation: slideInLetter 0.5s ease-out forwards; /* Base animation */
-            /* Start off-screen to the left */
-            transform: translateX(-50px); 
+            opacity: 0; 
+            /* Apply the new impact animation */
+            animation: impactReveal 0.6s ease-out forwards; 
+            transform: scale(0.5); /* Start small */
             margin: 0 1px; 
         }
 
@@ -53,15 +52,19 @@
         .letter:nth-child(6) { animation-delay: 1.0s; }  /* R */
         .letter:nth-child(7) { animation-delay: 1.1s; }  /* E */
 
-        /* --- KEYFRAMES for Left-to-Center Slide --- */
-        @keyframes slideInLetter {
+        /* --- KEYFRAMES for Impact Reveal (Zoom and Settle) --- */
+        @keyframes impactReveal {
             0% { 
                 opacity: 0; 
-                transform: translateX(-50px); /* Start 50px left */
+                transform: scale(0.5); /* Start small and invisible */
+            }
+            70% { 
+                opacity: 1; 
+                transform: scale(1.1); /* Over-scale (the 'impact' punch) */
             }
             100% { 
                 opacity: 1; 
-                transform: translateX(0); /* End in final position */
+                transform: scale(1.0); /* Settle at final size */
             }
         }
 
@@ -80,7 +83,7 @@
 </head>
 <body>
     <div id="animator-container">
-        <div class="static-logo" style="height: 30px; font-weight: bold; color: #444;">
+        <div class="logo-isopure-removebg-preview.png" style="height: 30px; font-weight: bold; color: #444;">
              Ads Data Hub
         </div>
 
@@ -94,9 +97,9 @@
             <span class="letter">E</span>
         </div>
 
-        <div class="logo-isopure-removebg-preview.png">
+        <div class="static-logo">
              I/O Digital
         </div>
     </div>
-    </body>
+</body>
 </html>
