--- a/wipro_lighting_ad.html
+++ b/wipro_lighting_ad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WIPRO LIGHTING </title>
+    <title>WIPRO_LIGHTING </title>
     <style>
         /* CRITICAL: Aggressive CSS to eliminate all margins/padding from the iframe */
         body, html {
