--- a/wipro_lighting.html
+++ b/wipro_lighting.html
@@ -39,7 +39,7 @@
 <body>
     <video 
         id="video-player" 
-        src="Wipro Lighting.mp4.mp4" 
+        src="Wipro Lighting new.mp4" 
         autoplay 
         muted 
         playsinline
