Update Wipro logo image URL in HTML file

--- a/wipro_lighting_logo.html
+++ b/wipro_lighting_logo.html
@@ -24,7 +24,7 @@
 
         .wipro-logo {
             /* Replace with the actual URL of your hosted Wipro logo image */
-            background-image: url('[PASTE_PUBLIC_WIPRO_LOGO_PNG_LINK_HERE]'); 
+            background-image: url('Wipro Logo.png'); 
             background-size: contain; /* Ensures the whole logo is visible */
             background-repeat: no-repeat;
             background-position: center bottom; /* Position image in container */
