--- a/wipro_lighting_logo.html
+++ b/wipro_lighting_logo.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <img src="Wipro Logo.png" 
+    <img src="wipro.png" 
          alt="Wipro lighting Brand logo" 
          class="logo">
 </body>
