Update logo image source in HTML file

--- a/wipro_lighting_logo.html
+++ b/wipro_lighting_logo.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <img src="wipro.png" 
+    <img src="wipro_new_logo.png" 
          alt="Wipro Lighting Brand logo" 
          class="logo">
 </body>
