--- a/wipro_lighting_logo.html
+++ b/wipro_lighting_logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Animated Brand Logo - Wipro</title>
+    <title>Animated Brand Logo - WiproL</title>
     <style>
         body, html {
             /* Ensures transparency and positioning for Looker Studio */
