--- a/overlap.html
+++ b/overlap.html
@@ -79,11 +79,11 @@
 <body>
     <div class="container">
         <img id="img-right" class="circle-img" 
-             src="[PUBLIC_LINK_TO_BUMPER_CIRCLE_PNG_HERE]" 
+             src="red_circle-removebg-preview.png" 
              alt="Bumper Campaign Circle">
 
         <img id="img-left" class="circle-img" 
-             src="[PUBLIC_LINK_TO_NON_SKIP_CIRCLE_PNG_HERE]" 
+             src="blue_circle-removebg-preview.png" 
              alt="Non Skip Campaign Circle">
     </div>
 </body>
